--- a/gestureaifrontend/package.json
+++ b/gestureaifrontend/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
@@ -42,8 +43,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-media-library": "~17.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
