--- a/gestureaifrontend/package.json
+++ b/gestureaifrontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -17,24 +17,32 @@
   "dependencies": {
     "@babel/highlight": "^7.25.9",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-voice/voice": "^3.1.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
+    "assemblyai": "^4.9.0",
+    "axios": "^1.8.4",
     "expo": "~52.0.38",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
-    "expo-file-system": "^18.0.12",
+    "expo-dev-client": "~5.0.19",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.18",
+    "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -46,7 +54,7 @@
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-media-library": "~17.0.6"
+    "expo-asset": "~11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
