Got the learn page working and the app running fully.

--- a/gestureaifrontend/package.json
+++ b/gestureaifrontend/package.json
@@ -54,7 +54,8 @@
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-asset": "~11.0.5"
+    "expo-asset": "~11.0.5",
+    "expo-video": "~2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
