--- a/gestureaifrontend/app.json
+++ b/gestureaifrontend/app.json
@@ -37,7 +37,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-asset"
+      "expo-asset",
+      "expo-av"
     ],
     "experiments": {
       "typedRoutes": true
